# Nexus

./: .gitignore  Cargo.toml  Docs.md  README.md  check_output.txt  presence.md
shell/: README.md  index.html  main.js  renderer.js  style.css
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/capabilities/: max_permissions.json
shell/src-tauri/src/: alpha.rs  audio_capture.rs  main.rs
src/: lib.rs  main.rs
src/audio/: capture.rs  mod.rs  processing.rs
src/intent/: manager.rs  mod.rs  types.rs
src/kernel/: cancel.rs  crystallizer.rs  event.rs  latent.rs  mod.rs  presence.rs  reactor.rs  scheduler.rs  state.rs  time.rs
src/kernel/audio/: mod.rs  monitor.rs  segment.rs
src/kernel/intent/: arbitrator.rs  long_horizon.rs  mod.rs  types.rs
src/kernel/memory/: consent.rs  consolidator.rs  mod.rs  types.rs
src/kernel/speech/: planner.rs
src/kernel/telemetry/: event.rs  metrics.rs  mod.rs  recorder.rs
src/memory/: consolidator.rs  mod.rs  observer.rs  retriever.rs  store.rs  types.rs
src/monitor/: mod.rs  monitor.rs  types.rs
src/outputs/: mock_audio.rs  mod.rs  realizer.rs  text.rs
src/planner/: async_planner.rs  mod.rs  stub.rs  types.rs
src/services/llm/: client.rs
src/vision/: pipeline.rs
tests/: phase1_tests.rs  phase2_audio_tests.rs  phase3_vision_tests.rs  phase5_latent_tests.rs  phase6_crystallization_tests.rs  phase7_memory_tests.rs  phase8_monitor_tests.rs  phase9_intent_tests.rs  phase_b_integration.rs  phase_e_test.rs  phase_f_unit.rs  phase_g_dialogue.rs  phase_h_memory.rs  phase_i_long_horizon.rs  phase_j_telemetry.rs  verification_test.rs
