[package]
name = "nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["full"] }
reqwest = { version = "0.12.26", features = ["json"] }
serde_json = "1.0.145"
cpal = "0.15"
ringbuf = "0.4"
webrtc-vad = "0.4"
rubato = "0.14"

