[package]
name = "nexus_shell"
version = "0.1.0"
description = "Nexus Minimal Desktop Shell"
authors = ["Sid"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Link to the local Nexus Core library
nexus = { path = "../../" }

[features]
# default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
